# ros_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
install/ignition_lecture/share/ignition_lecture/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ignition_lecture/share/ignition_lecture/environment/: ignition_lecture.dsv
install/ignition_lecture/share/ignition_lecture/launch/: gazebo.launch.py  model_example1.launch.py
install/ignition_lecture/share/ignition_lecture/worlds/: basic_world1.sdf  model_example1.sdf
install/ignition_plugin_lecture/share/ignition_plugin_lecture/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sam_bot_description/share/sam_bot_description/: package.sh
install/sam_bot_description/share/sam_bot_description/config/: bridge_config.yaml  ekf.yaml
log/: latest_build
src/ignition_lecture/: CMakeLists.txt  package.xml
src/ignition_lecture/hooks/: ignition_lecture.dsv.in
src/ignition_lecture/install/: local_setup.sh  setup.sh  setup.zsh
src/ignition_lecture/launch/: basic_world1.launch.py
src/ignition_lecture/log/: latest_build
src/ignition_lecture/models/custom_burger/: model.sdf
src/ignition_lecture/worlds/: basic_world1.sdf  model_example1.sdf
src/ignition_plugin_lecture/: CMakeLists.txt
src/ignition_plugin_lecture/hooks/: ignition_plugin_lecture.dsv.in
src/ignition_plugin_lecture/src/rotate_axis/: rotate_axis.cpp
src/ignition_plugin_lecture/src/switch_panel/: SwitchPanel.cpp  SwitchPanel.hpp
(+9 files in other folders)
